--- a/sm-front-end/src/app/auth/login/login.component.css
+++ b/sm-front-end/src/app/auth/login/login.component.css
@@ -6,6 +6,7 @@
     background-size: cover;
     background-color: black; 
     position: absolute; top: 0; left: 0; height: 100%; width: 100%;
+    overflow: hidden;
 }
 
 .card{
