--- a/sm-front-end/src/app/auth/login/login.component.html
+++ b/sm-front-end/src/app/auth/login/login.component.html
@@ -2,26 +2,8 @@
     <div class="row justify-content-center align-items-center h-100">
         <div class="col-sm-4 card text-white p-4">
 
-            <h1 class="h4">Iniciar sesión</h1>
-            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                <div class="alert alert-danger" role="alert" *ngIf="errorMessage">{{ errorMessage }}</div>
-                <div class="form-group">
-                    <label for="inputEmail">Correo electrónico</label>
-                    <input type="email" class="form-control" id="inputEmail" placeholder="Correo electrónico"
-                        formControlName="email"
-                        [ngClass]="{'is-invalid': loginForm.get('email').invalid && loginForm.get('email').touched}">
-                </div>
-                <div class="form-group">
-                    <label for="inputPassword">Contraseña</label>
-                    <input type="password" class="form-control" id="inputPassword" placeholder="Contraseña"
-                        formControlName="password"
-                        [ngClass]="{'is-invalid': loginForm.get('password').invalid && loginForm.get('password').touched}">
-                </div>
-                <div class="d-flex justify-content-center">
-                    <button type="submit" class="btn btn-block btn-primary">Ingresar</button>
-                </div>
-            </form>
-
+            <app-login-form *ngIf="!newUser" (newUserEvent)="showRegisterForm(true)"></app-login-form>
+            <app-register-form *ngIf="newUser" (finishedEvent)="showRegisterForm(false)"></app-register-form>
         </div>
     </div>
 </div>
