Componente para mostrar lista de puertas

--- a/sm-front-end/src/app/home/home.component.html
+++ b/sm-front-end/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-<app-interactive-map></app-interactive-map>
+<div class="row">
+    <div class="col">
+        <app-door-list></app-door-list>
+    </div>
+    <div class="col">
+        <app-interactive-map></app-interactive-map>
+    </div>
+</div>
