--- a/sm-front-end/src/app/home/home.component.html
+++ b/sm-front-end/src/app/home/home.component.html
@@ -1,6 +1,9 @@
 <div class="row">
-    <div class="col">
+    <div class="col-sm-4 px-4">
+        <app-light-bulb-list></app-light-bulb-list>
+        <hr>
         <app-door-list></app-door-list>
+        <hr>
     </div>
     <div class="col">
         <app-interactive-map></app-interactive-map>
