--- a/sm-front-end/src/app/home/door-list/door/door.component.html
+++ b/sm-front-end/src/app/home/door-list/door/door.component.html
@@ -2,8 +2,8 @@
 <div class="row justify-content-left">
     <div class="col-auto content_center">
         <div class="content_center">
-            <span class="icon" *ngIf="door.state"><i class="fas fa-2x fa-door-open"></i></span>
-            <span class="icon" *ngIf="!door.state"><i class="fas fa-2x fa-door-closed"></i></span>
+            <span class="icon-blue" *ngIf="door.state"><i class="fas fa-2x fa-door-open"></i></span>
+            <span class="icon-blue" *ngIf="!door.state"><i class="fas fa-2x fa-door-closed"></i></span>
         </div>
     </div>
     <div class="col">
@@ -13,9 +13,6 @@
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                Estado:
-            </div>
             <div class="col font-weight-bold">
                 <div style="color: red" *ngIf="!door.state">Cerrado</div>
                 <div style="color: green" *ngIf="door.state">Abierto</div>
