--- a/sm-front-end/src/app/home/door-list/door-list.component.html
+++ b/sm-front-end/src/app/home/door-list/door-list.component.html
@@ -1,8 +1,10 @@
 <div class="m-3">
-    <div class="h4 hover" (click)="collapse.toggle()" [attr.aria-expanded]="!isCollapsed">
-        <b>Puertas</b>
+    <div class="hover" (click)="collapse.toggle()" [attr.aria-expanded]="!isCollapsed">
+        <div class="h4">
+            <b>Puertas</b>
+        </div>
+        <small class="form-text text-muted">En esta sección puede observar el estado de las puertas.</small>
     </div>
-    <small class="form-text text-muted">En esta sección puede observar el estado de las puertas.</small>
     <div #collapse="ngbCollapse" [(ngbCollapse)]="isCollapsed">
         <app-door *ngFor="let door of doors" [door]="door"></app-door>
     </div>
