Barra de navegacion

--- a/sm-front-end/src/app/home/home.component.html
+++ b/sm-front-end/src/app/home/home.component.html
@@ -1,10 +1,5 @@
-<div class="row">
-    <div class="col-sm-3 px-4">
-        <app-light-bulb-list></app-light-bulb-list>
-        <hr>
-        <app-door-list></app-door-list>
-        <hr>
-    </div>
+<app-navbar></app-navbar>
+<div class="row my-3">
     <div class="col">
         <app-interactive-map></app-interactive-map>
     </div>
