--- a/sm-front-end/src/app/home/door-list/door/door.component.html
+++ b/sm-front-end/src/app/home/door-list/door/door.component.html
@@ -1,5 +1,4 @@
-<hr class="my-2">
-<div class="row justify-content-left">
+<div class="row my-3 justify-content-left">
     <div class="col-auto content_center">
         <div class="content_center">
             <span class="icon-blue" *ngIf="door.state"><i class="fas fa-2x fa-door-open"></i></span>
