--- a/sm-front-end/src/app/home/light-bulb-list/light-bulb-list.component.html
+++ b/sm-front-end/src/app/home/light-bulb-list/light-bulb-list.component.html
@@ -1,23 +1,20 @@
-<div class="m-3">
-    <div class="hover" (click)="collapse.toggle()" [attr.aria-expanded]="!isCollapsed">
-        <div class="h4">
-            <div class="row">
-                <div class="col">
-                    <b>Luces</b>
-                </div>
-            </div>
-        </div>
-        <small class="form-text text-muted">Presione sobre el icono de la bombilla para cambiar el estado.</small>
-    </div>
-    <div #collapse="ngbCollapse" [(ngbCollapse)]="isCollapsed">
+<div class="modal-header mx-1">
+    <div class="h5">Luces</div>
+    <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+<div class="modal-body">
+    <div>Presione sobre el icono de la bombilla para cambiar el estado.</div>
+    <div class="px-2">
         <app-light-bulb *ngFor="let lightBulb of lightBulbList" [lightBulb]="lightBulb"></app-light-bulb>
-        <div class="row mt-1">
-            <div class="col m-1">
-                <button class="btn btn-success btn-block" (click)="turnOn()">Encender todo</button>
-            </div>
-            <div class="col m-1">
-                <button class="btn btn-danger btn-block" (click)="turnOff()">Apagar todo</button>
-            </div>
-        </div>
+    </div>
+</div>
+<div class="modal-footer">
+    <div class="col m-1">
+        <button class="btn btn-success btn-block" (click)="turnOn()">Encender todo</button>
+    </div>
+    <div class="col m-1">
+        <button class="btn btn-danger btn-block" (click)="turnOff()">Apagar todo</button>
     </div>
 </div>
