--- a/sm-front-end/src/app/home/light-bulb-list/light-bulb/light-bulb.component.html
+++ b/sm-front-end/src/app/home/light-bulb-list/light-bulb/light-bulb.component.html
@@ -1,8 +1,7 @@
-<hr class="my-2">
-<div class="row justify-content-left">
+<div class="row my-3 justify-content-left">
     <div class="col-auto content_center">
         <div class="hover" (click)="changeState()">
-            <span style="color: #e3d952" class="icon" *ngIf="lightBulb.state"><i class="far fa-2x fa-lightbulb"></i></span>
+            <span style="color: var(--bulb-color)" class="icon" *ngIf="lightBulb.state"><i class="far fa-2x fa-lightbulb"></i></span>
             <span class="icon" *ngIf="!lightBulb.state"><i class="far fa-2x fa-lightbulb"></i></span>
         </div>
     </div>
