Plano de la casa

--- a/sm-front-end/src/app/home/home.component.html
+++ b/sm-front-end/src/app/home/home.component.html
@@ -1,6 +1,4 @@
 <app-navbar></app-navbar>
-<div class="row my-3">
-    <div class="col">
-        <app-interactive-map></app-interactive-map>
-    </div>
+<div class="d-flex align-items-center justify-content-center mt-4">
+    <app-interactive-map></app-interactive-map>
 </div>
