--- a/sm-front-end/src/app/home/navbar/navbar.component.html
+++ b/sm-front-end/src/app/home/navbar/navbar.component.html
@@ -5,7 +5,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="navbar-collapse dual-collapse2 justify-content-between align-items-center w-100"
+    <div class="navbar-collapse dual-collapse2 justify-content-between align-items-center"
         [class.collapse]="collapse" [hidden]="collapse">
         <ul class="navbar-nav mr-auto">
 
