Camera request implemented

--- a/sm-front-end/src/app/home/navbar/navbar.component.html
+++ b/sm-front-end/src/app/home/navbar/navbar.component.html
@@ -18,7 +18,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link">Cámara</a>
+                <a class="nav-link" (click)="onCamera()">Cámara</a>
             </li>
         </ul>
 
